# kubernetes-keda-sqs-processor

./: ARCHITECTURE.md  Cargo.toml  Dockerfile  README-KEDA-IAM-FIX.md  README.md  article.md
.junie/: guidelines.md
aws/: sqs-queue.yaml
kubernetes/: keda-values.yaml
kubernetes/cluster/: cluster-config.yaml
kubernetes/keda-service/: configmap.yaml  deployment.yaml  scaled-object.yaml  trigger-authentication.yaml
kubernetes/scripts/: install-keda.sh  setup-app-irsa.sh  setup-keda-irsa.sh
scripts/: apply-kubernetes-manifests.sh  cleanup-resources.sh  configure-manifests.sh  deploy-sqs-queue.sh  send-test-messages.sh
src/: main.rs
src/health/: mod.rs  server.rs
src/models/: config.rs  message.rs  mod.rs
src/services/: mod.rs  sqs.rs
