[package]
name = "sqs-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS SDK
aws-config = "0.56.1"
aws-sdk-sqs = "0.30.0"
aws-types = "0.56.1"

# Async runtime
tokio = { version = "1.29.1", features = ["full"] }

# Logging
log = "0.4.19"
env_logger = "0.10.0"

# HTTP server for health checks
axum = "0.6.19"

# Signal handling
signal-hook = "0.3.15"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures-util = "0.3.28"

# Error handling
anyhow = "1.0.72"
thiserror = "1.0.44"

# Configuration
config = "0.13.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
